@@ -16,6 +16,9 @@ Changes in stable release 2.4.9 (not released yet)
 * Fixed wrong warp coordinates when WarpToWindow was used with two
   arguments on an unmanaged window.
 
+* Added a workaround for popup menus in TK applications that appear
+  on some random position.
+
 -------------------------------------------------------------------
 
 Changes in stable release 2.4.8 (11-Jun-2002)
